# pfr

./: Cargo.toml  README.md  TECH.md  index.html
.cargo/: config.toml
src/: assets.rs  bcd.rs  config.rs  icons.rs  iff.rs  intro.rs  lib.rs  main.rs  sound.rs  table.rs  view.rs  wasm.rs
src/assets/: iff.rs  intro.rs  mz.rs  table.rs
src/assets/table/: dm.rs  flippers.rs  gfx.rs  lights.rs  physics.rs  script.rs  sound.rs
src/sound/: controller.rs  loader.rs  player.rs
src/table/: ball.rs  cheat.rs  dm.rs  game.rs  lights.rs  mode.rs  party.rs  physics.rs  player.rs  script.rs  scroll.rs  show.rs  sound.rs  speed.rs  stones.rs  tasks.rs  triggers.rs
